--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "alpinejs": "^2.8.1",
         "daisyui": "^1.10.0",
+        "dragula": "^3.7.3",
         "intl-tel-input": "^17.0.13",
         "noty": "^3.2.0-beta-deprecated",
         "sal.js": "^0.8.5",
